# tg_supabot

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
bot/: __main__.py  config.py
bot/filters/: admin.py
bot/handlers/: __init__.py  start.py  sticker.py  tools.py
bot/services/: broadcaster.py
docker/: bot-entrypoint.sh  bot.Dockerfile  postgres.Dockerfile
src/: alembic.ini
src/alembic/: env.py
src/alembic/versions/: 268bcdfb0c0e_init_migrations_add_message.py  4dc3cbe276e2_add_toxic_level_in_user.py  6f2ade8051f7_init_add_message_data.py  920217c0495c_fix_nullable_param_in_toxic_level.py  f50b6ad6c736_initial.py
src/bot/: __main__.py  config.py
src/bot/db/: __init__.py  base.py  methods.py  models.py
src/bot/filters/: admin.py
src/bot/handlers/: __init__.py  mentions.py  penis.py  sanitary.py  settings.py  start.py  sticker.py  toxicity_control.py
src/bot/keyboards/: inline.py  reply.py
src/bot/middlewares/: toxity_middleware.py  user_exist.py
src/bot/redis/: __init__.py  base.py
src/bot/services/: apshed.py  toxicity.py  usenn.py
