[tool.poetry]
name = "tg-supabot"
version = "0.1.0"
description = "SupaBot for somethings"
authors = ["hoopengo <hoopengo@yandex.ru>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "tg_supabot"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = {version = "^3.0.0b8", allow-prereleases = true}
pydantic-settings = "^2.0.2"
betterlogging = "^0.2.1"
safetensors = "^0.3.1"
torch = {extras = ["cuda"], version = "^2.0.1"}
torchvision = "^0.15.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
